<resources>
    <string name="lang">en</string>
    <string name="app_name">Firebird</string>
    <string name="welcome">Welcome to <b>Firebird</b></string>
    <string name="err_nothing_useful">No useful data found</string>
    <string name="emergency_mode">Something went wrong</string>
    <string name="emergency_share">Share error report</string>

    <string name="working">Please wait a bit&#8230;</string>
    <string name="working_note">It may take up to 30 seconds</string>
    <string name="step_title_choose_provider">Choose providers</string>
    <string name="step_title_account">Setup an account</string>
    <string name="step_title_open">Go to wallet</string>

    <string name="step_choose_or_scan">You can also choose your own by scanning a provider QR code.</string>
    <string name="welcome_subtitle">Truly <b>fast</b>, <b>private</b> and <b>cheap</b> Bitcoin payments</string>
    <string name="step_account_email_pass">Providers will know an email and will be able to provide an assistance in case of password loss.</string>
    <string name="step_account_recovery_phrase">Fully anonymous option, but make sure that recovery phrase is written down and stored in a safe place.</string>
    <string name="step_open_note">Everything is set up, the wallet is ready to be used. Thanks for choosing <b>Firebird</b>!</string>

    <string name="check_no_account"><![CDATA[
        No matching account exists, here are possible reasons why:<br><br>
        - <b>Incorrect credentials</b>. Please make sure your email and password combination (or recovery phrase) is exactly the same you used when creating a wallet.<br><br>
        - <b>Missing a provider</b>. You could have used a provider which is not on default list, in that case please choose that provider by scanning its QR code and try again.
    ]]></string>

    <string name="check_failed"><![CDATA[
        Account checking could not be performed, here are possible reasons why:<br><br>
        - <b>Connectivity issues</b>. Please make sure internet connection is available on your device and Firebird has permissions for network access.<br><br>
        - <b>Unreachable providers</b>. Remote provider services may be on maintenance at the moment, please try a bit later or contact provider support.
    ]]></string>

    <string name="action_scan_qr">Scan QR code</string>
    <string name="action_email_password">Email and password</string>
    <string name="action_email_password_hint_email">Type your email</string>
    <string name="action_email_password_hint_password">Type a password</string>
    <string name="action_email_password_hint_password_again">Retype a password</string>
    <string name="action_email_password_random_note">Allow Firebird to generate and store a strong password, it can be exported at any time.</string>
    <string name="action_email_password_random">Use random password</string>

    <string name="action_recovery_phrase">Recovery phrase</string>
    <string name="action_recovery_phrase_hint">Type 12 phrase words</string>
    <string name="action_recovery_phrase_new">Random recovery phrase</string>
    <string name="action_recovery_phrase_existing">Your own recovery phrase</string>
    <string name="error_short_phrase">Recovery phrase must be 12 words long</string>
    <string name="step_account_recovery_phrase_new_note">Use this phrase to restore balance if wallet gets lost or deleted. Please make sure to write it down sooner rather than later.</string>
    <string name="step_account_recovery_phrase_existing_note">Firebird will not store a provided phrase, it is only used once to derive payment keys.</string>

    <string name="action_open_restore">Restore existing account</string>
    <string name="action_open_restore_disabled_random_pass">Disabled since random password is chosen</string>
    <string name="action_open_restore_disabled_random_phrase">Disabled since random recovery phrase is chosen</string>

    <string name="password_match">MATCH</string>
    <string name="password_mismatch">MISMATCH</string>
    <string name="password_strength_weak">WEAK</string>
    <string name="password_strength_short">SHORT</string>
    <string name="password_strength_medium">MEDIUM</string>
    <string name="password_strength_good">STRONG</string>
    <string name="email_invalid">INVALID</string>

    <string name="error_pr_expired">Expired payment request</string>
    <string name="error_sum_small">Amount is too small</string>
    <string name="error_sum_big">Amount is too large</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_close">Close app</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_share">Share</string>
    <string name="dialog_auth">Auth</string>
    <string name="dialog_view">View</string>
    <string name="dialog_pay">Pay</string>
    <string name="dialog_max">Max</string>
    <string name="dialog_ok">OK</string>

    <string name="amount_receive_title">Receive Payment</string>
    <string name="amount_send_title">Send Payment</string>

    <string name="amount_hint_can_receive">Can receive %1$s</string>
    <string name="amount_hint_can_send">Can send %1$s</string>

    <string name="buffer_invoice_found">Lighting invoice is found in clipboard</string>
    <string name="buffer_address_found">Bitcoin address is found in clipboard</string>
    <string name="buffer_link_found">Payment link is found in clipboard</string>

    <string name="incoming_notify_title_wait">Waiting for incoming payment</string>
    <string name="incoming_notify_title_process">Payment is being processed</string>
    <string name="incoming_notify_body">Keep wallet running to get %1$s</string>

    <string name="in_flight_notify_title">Incoming payment is pending</string>
    <string name="in_flight_notify_body">Please open an app to finalize it</string>

    <!-- auth -->

    <string name="sets_use_fp">Use authentication</string>
    <string name="fp_no_support">No authentication support on this phone</string>
    <string name="fp_not_available">Authentication support is blocked at the moment, try again later</string>
    <string name="fp_add_auth_method">Register at least one authentication method in system settings</string>
    <string name="fp_auth_error"><![CDATA[<b>Authentication error</b><br><br><b>Details</b>: %1$s<br><br><b>Code</b>: %2$s]]></string>
    <string name="fp_title">Firebird authentication</string>

    <!-- /auth -->

    <!-- menu -->

    <string name="item_shopping">Shopping</string>
    <string name="item_wallet">Wallet</string>
    <string name="item_addons">Addons</string>

    <!-- /menu -->

    <!-- orbot -->

    <string name="orbot_status">Checking Orbot status&#8230;</string>
    <string name="orbot_err_not_installed"><b>Orbot is not installed so Tor network can not be used right now</b>. Further wallet progress has been halted because your settings require Firebird to be Tor-protected.</string>
    <string name="orbot_err_unclear"><b>It is unclear whether Orbot can provide Tor services right now</b>. Further wallet progress has been halted because your settings require Firebird to be Tor-protected.</string>
    <string name="orbot_err_disconnect">Orbot has disconnected, halting an app</string>
    <string name="orbot_action_install">Close Firebird and install Orbot</string>
    <string name="orbot_action_open">Close Firebird and open Orbot</string>
    <string name="orbot_action_skip">Proceed without Tor</string>

    <!-- /orbot -->

    <!-- rating dialog -->

    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_never">Never</string>

    <!-- /rating dialog -->

    <!-- HC errors -->

    <string name="err_hosted_wrong_blockday">Incorrect blockday</string>
    <string name="err_hosted_wrong_local_sig">Incorrect local signature</string>
    <string name="err_hosted_wrong_remote_sig">Incorrect remote signature</string>
    <string name="err_hosted_closed_by_remote_peer">Closed by remote peer</string>
    <string name="err_hosted_timed_out_outgoing_htlc">Timed out outgoing payment</string>
    <string name="err_hosted_htlc_external_fulfill">External payment fulfill</string>
    <string name="err_hosted_manual_suspend">Channel manually suspended</string>
    <string name="err_hosted_invalid_resize">Invalid resize attempt</string>
    <string name="err_hosted_missing_channel">Channel missing</string>
    <string name="err_hosted_channel_denied">Channel denied</string>

    <!-- /HC errors -->
</resources>
