<LinearLayout style="@style/StandardLinearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.ornach.nobobutton.NoboButton
        android:layout_marginBottom="12dp"
        app:nb_text="@string/action_email_password"
        android:id="@+id/useEmailPassword"
        style="@style/ActionButton"/>

    <TextView
        android:text="@string/step_account_email_pass"
        style="@style/FillingView"/>

    <View
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        style="@style/GrayDivider"/>

    <com.ornach.nobobutton.NoboButton
        android:layout_marginBottom="12dp"
        app:nb_text="@string/action_recovery_phrase"
        android:id="@+id/useRecoveryPhrase"
        style="@style/ActionButton"/>

    <TextView
        android:text="@string/step_account_recovery_phrase"
        style="@style/FillingView"/>

</LinearLayout>